Add express and first server setting

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "node-shop#3",
   "main": "index.js",
   "dependencies": {
+    "express": "^4.17.1",
     "init": "^0.1.2"
   },
   "devDependencies": {},
